--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(arp C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(arp main.c arp.c arp.h ipv4.c ipv4.h)
+add_executable(arp main.c arp.c arp.h ipv4.c ipv4.h icmp.c icmp.h)
